namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-audit-poc-prod/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-audit-poc-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "prod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "dps_tech_team"
    cloud-platform.justice.gov.uk/slack-alert-channel: "dps_alerts_prod"
    cloud-platform.justice.gov.uk/application: "HMPPS Audit POC UI prod"
    cloud-platform.justice.gov.uk/owner: "DPS Tech Team"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-audit-poc-ui.git"
    cloud-platform.justice.gov.uk/team-name: "dps-tech"
